syntax = "proto3";

package userdocument;

option go_package = "rpc/pb";

import "google/protobuf/timestamp.proto";

// Version
message VersionReq {
}
message VersionResp {
  string Version = 1;
}

// 收藏文档
message DocumentCollectReq {
  string WxUID = 1; // 微信用户OpenID
  string URL = 2; // 文档地址
}
message DocumentCollectResp {
}

// 检索文档
message DocItem {
  string DocID = 1;
  string URL = 2;
  string Title = 3;
  float Score = 4;
  google.protobuf.Timestamp CollectTime = 5;
}
message DocumentSearchReq {
  string WxUID = 1;
  repeated string Keywords = 2;
}
message DocumentSearchResp {
  string WxUID = 1;
  repeated DocItem List = 2;
}

// 查询用户文档
message FindDocInfo {
  string DocID = 1;
  string URL = 2;
  string Title = 3;
  google.protobuf.Timestamp CollectTime = 4;
}
message FindUserDocReq {
  string WxUID = 1;
}
message FindUserDocResp {
  string WxUID = 1;
  repeated FindDocInfo List = 2;
}

service UserDocument {
  rpc Version(VersionReq) returns (VersionResp); // 服务版本
  rpc CreateDoc(DocumentCollectReq) returns (DocumentCollectResp); // 用户创建文档
  rpc SearchDoc(DocumentSearchReq) returns (DocumentSearchResp); // 用户检索文档
  rpc FindUserDoc(FindUserDocReq) returns (FindUserDocResp); // 查询用户文档
}